# gitea-codespace

./: .gitignore  Cargo.toml  README.md  space-inject.css  space-inject.js
.github/workflows/: Release.yml  docker.yml
docker/: .dockerignore  Dockerfile  Dockerfile-mini  chat-language-model-loader.vsix  entrypoint.sh  git-credential-workspace-manager
docker/chat-language-model-loader/: README.md  extension.js  models.sample.json  package.json
docker/docker/: Dockerfile  chat-language-model-loader.vsix  entrypoint.sh
docker/docker/chat-language-model-loader/: README.md  models.sample.json  package.json
docker/github-authentication/: README.md  UPSTREAM_INFO.json  VSCODE_COMMIT  build.sh  update-upstream.sh
docker/github-authentication/patches/: 0001-env-github-token-auth.patch
docker/github-authentication/scripts/: bundle-node-extension.js
docker/github-authentication/upstream/: package.json
docker/github-authentication/upstream/src/: extension.ts  github.ts
src/: api.rs  auth.rs  config.rs  gitea_origin.rs  main.rs  naming.rs  oauth.rs  public_url.rs  store.rs  workspace.rs
